recursion.cons.lessons.recursion.cons.Nfirst.scala.error
nfirst:5: error: not found: value nfirsts
else l.head :: nfirsts(l.tail, n-1)
               ^