recursion.cons.lessons.recursion.cons.Nfirst.scala.code
def nfirst(l:List[Int], n:Int): List[Int] = {

if (n == 0)
  Nil
else l.head :: nfirsts(l.tail, n-1)
}
